--- a/style/style.css
+++ b/style/style.css
@@ -49,6 +49,7 @@
     text-align: center;
     margin: 32px 0px;
     padding: 21px 24px 21px 24px;
+    cursor: pointer;
 }
 .container{
     margin: 74px 152px 88px 148px;
@@ -126,6 +127,7 @@
     text-align: center;
     padding: 12px 20px 12px 20px;
     margin-top: 32px;
+    cursor: pointer;
 }
 .code .code-img{
     position: absolute;
@@ -356,4 +358,24 @@
     font-weight: 600;
     text-align: center;
     margin: 0px 10px;
+    cursor: pointer;
+}
+.footer-container{
+    border-radius: 16px;
+    background: rgba(13, 19, 33, 0.03);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 32px 150px 32px 150px;
+}
+.footer-title p {
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+}
+.footer-social-media a {
+    margin: 0 10px;
+    display: inline-block;
 }
