--- a/style/style.css
+++ b/style/style.css
@@ -183,6 +183,7 @@
     text-align: left;
     margin: 16px 0px 32px 0px;
     padding: 16px 0 32px 0;
+    opacity: 0.7;
 }
 .zero-hero .zero-hero-content{
     display: flex;
